# TRPGLogger

./: .gitignore  DEVELOPER.md  README.md  pyproject.toml
TRPGLogger/: .gitignore  __init__.py  s3.py  sqlite.py
nonebot_plugin_trpglogger/: __init__.py  cqhttp.py  data.py  handle.py  mirai.py  nb.py  sqlite.py  upload.py
