[tool.poetry]
name = "nonebot_plugin_trpglogger"
version = "0.1.4"
description = "a logger for TRPG"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "AGPLv3"
readme = "README.md"
homepage = "https://github.com/thereisnodice/TRPGLogger"
repository = "https://github.com/thereisnodice/TRPGLogger"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.13"
nonebot2 = "^2.0.0-alpha.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"