[tool.poetry]
name = "nonebot_plugin_trpglogger"
version = "0.3.3"
description = "a logger for TRPG"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/thereisnodice/TRPGLogger"
repository = "https://github.com/thereisnodice/TRPGLogger"

[tool.poetry.dependencies]
python = "^3.7.3"
boto3 = "^1.17.13"
nonebot2 = "^2.0.0b1"
nonebot-adapter-onebot = "^2.0.0b1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.5.0"
black = { version = "^21.9b0", allow-prereleases = true }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
