[project]
authors = [
    {name = "Jigsaw", email = "j1g5aw@foxmail.com"},
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "nonebot2<3.0.0,>=2.0.0",
    "nonebot-adapter-onebot<3.0.0,>=2.2.2",
    "aiofiles<1.0.0,>=0.8.0",
    "httpx<1.0.0,>=0.23.1",
]
name = "nonebot_plugin_trpglogger"
version = "0.4.1"
description = "a logger for TRPG"
readme = "README.md"
license = {text = "AGPL-3.0"}

[project.urls]
homepage = "https://github.com/thereisnodice/TRPGLogger"
repository = "https://github.com/thereisnodice/TRPGLogger"

[tool.pdm.dev-dependencies]
pre-commit = ["pycln", "isort", "black", "nonemoji", "pre-commit"]
nonebot = ["fastapi", "uvicorn",]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.8"
pythonPlatform = "All"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

